--- a/FL12_HW2/homework/css/style.css
+++ b/FL12_HW2/homework/css/style.css
@@ -1,5 +1,102 @@
-/*
+.tm-nav-item:hover, .tm-nav-item-link:hover {
+    background-color: lightskyblue;
+    color: #fff;
+    /*transition: background .5s linear;*/
+}
+.tm-banner {
+    /*box-shadow: none|h-offset v-offset blur spread color |inset|initial|inherit;*/
+    box-shadow: 0 0 10px rgba(107, 73, 74, 0.59);
+    background-image: linear-gradient(to left, burlywood, lightskyblue);
+}
+.tm-banner-inner {
+    background-color: #fff;
+}
+.tm-banner-text {
+/*  text-shadow: h-shadow v-shadow blur-radius color|none|initial|inherit;  */
+    text-shadow: 2px 2px 3px #333;
+    position: relative;
+    /*animation: textAnimation infinite ease-in-out 4s normal;*/
+    animation: textAnimation infinite  3s;
+}
+@keyframes textAnimation {
+    from {left: 200px;}
+    to {left: 0;}
+}
 
-write your code here
+.flex-2-col {
+    display: flex;
+    flex-direction: row; /*default*/
+    /*align-items - cross (vertical) alignment*/
+    align-items: center;
+    justify-content: space-around;
+}
 
-*/
+.tm-section-title {
+    text-align: center;
+    max-width: none;
+    line-height: 1.85em;
+}
+/*.blocks .tm-section-description:last-child {*/
+/*    letter-spacing: 5px;*/
+/*    word-spacing: 10px;*/
+/*    font-style: italic;*/
+/*}*/
+.tm-section-description {
+    text-indent: 1.5em;
+}
+/*.blocks .tm-section-description {*/
+/*    line-height: 1.85em;*/
+/*}*/
+
+.tm-section-title-box:hover {
+    font-style: italic;
+    background-color: lightgrey;
+    transition: background-color .5s linear;
+}
+.padding-medium li {
+    list-style: lower-alpha;
+
+}
+.padding-medium li:hover::before { /*or li:hover a::before*/
+    content: '>';
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+}
+.text::after {
+    content: "New";
+    font-size: 8px;
+    vertical-align: super;
+    color: red;
+    font-weight: bold;
+    text-decoration: none !important;
+}
+section:nth-of-type(3) .tm-section-title, section:nth-of-type(5) .tm-section-title {
+     text-align: left;
+ }
+section:nth-of-type(3) p:nth-child(3) {
+    letter-spacing: 5px;
+    word-spacing: 10px;
+}
+section:nth-of-type(3) li:nth-child(odd){
+    padding: 10px;
+    background-color: lightskyblue;
+    color: #fff;
+}
+/* task 11 - ???????*/
+p .tm-section-description {
+    text-space: 25px;
+    line-height: 30px;
+}
+section:nth-of-type(5) input:focus {
+    background-color: lightblue;
+}
+section:nth-of-type(5) textarea {
+    background: url("../img/email-icon.png") no-repeat;
+    background-size: 30px;
+    background-position: bottom 14px right 14px;
+    /*display: flex;*/
+    /*align-items: flex-end;*/
+    /*justify-content: right;*/
+}
+/*rgba(61, 55, 61, 0.7)*/
