--- a/FL12_HW2/homework/css/style.css
+++ b/FL12_HW2/homework/css/style.css
@@ -5,7 +5,7 @@
 }
 .tm-banner {
     /*box-shadow: none|h-offset v-offset blur spread color |inset|initial|inherit;*/
-    box-shadow: 0 0 10px rgba(107, 73, 74, 0.59);
+    box-shadow: 0 0 10px rgba(61, 55, 61, 0.7);
     background-image: linear-gradient(to left, burlywood, lightskyblue);
 }
 .tm-banner-inner {
@@ -69,7 +69,10 @@
     vertical-align: super;
     color: red;
     font-weight: bold;
-    text-decoration: none !important;
+/*to not underline "New" letters - the following line does not work*/
+    /*text-decoration: none !important;*/
+    /*but this works!!!:*/
+    display: inline-block;
 }
 section:nth-of-type(3) .tm-section-title, section:nth-of-type(5) .tm-section-title {
      text-align: left;
@@ -88,6 +91,10 @@ p .tm-section-description {
     text-space: 25px;
     line-height: 30px;
 }
+section:nth-of-type(5) input {
+    border: solid lightskyblue;
+    border-width: 0 0 2px 0;
+}
 section:nth-of-type(5) input:focus {
     background-color: lightblue;
 }
@@ -99,4 +106,18 @@ section:nth-of-type(5) textarea {
     /*align-items: flex-end;*/
     /*justify-content: right;*/
 }
-/*rgba(61, 55, 61, 0.7)*/
+.tm-main-nav, section {
+    box-shadow: 0 0 10px rgba(61, 55, 61, 0.7);
+}
+
+/* add triangle */
+section::before {
+    /*does not work without next two lines*/
+    content: '';
+    border: 50px solid lightskyblue; /*arrow size*/
+
+    border-right: 50px solid transparent;
+    border-bottom: 50px solid transparent;
+    /*position: absolute;*/
+    z-index: 8; /*less than banner*/
+}
